--- a/Test.html
+++ b/Test.html
@@ -5,7 +5,8 @@
 <style>
 
     body { 
-      min-height: 100%; 
+      width: 100vw;
+      height: 100vh; 
       }
 
     .allItems {
@@ -16,12 +17,13 @@
     .nav {
       font-size: 13px;
       font-family: Arial, Helvetica, sans-serif;
-      height: auto;
+      height: 10%;
       width: 100%;
       background: white;
       display: grid;
       grid-template-columns: 10% 70% 20%;;
       grid-template-rows: 60px;
+      align-items: center;
       
       
     }
@@ -42,11 +44,11 @@
       background: white;
       display: grid;
       grid-template-columns: 1fr;
-      grid-template-rows: minmax(200px, 2fr) minmax(100px, 1fr) minmax(100px, 1fr);
-      align-content: center;
-      justify-content: center;
+      grid-template-rows: minmax(200px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);
+      /*align-content: center;
+      justify-content: center;*/
       justify-items: center;
-      align-items: center;
+      align-items: top;
       border: black 2px;
     }
     .pageBottom {
@@ -54,23 +56,11 @@
       font-family: Arial, Helvetica, sans-serif;
       height: auto;
       width: 100%;
-      background: darkgrey;
+      background: rgb(218, 220, 224);
       display: grid;
       grid-template-columns: 1fr 1fr 1fr 8fr 1fr 1fr 1fr;
       grid-template-rows: 60px;
       align-content: flex-end;
-    }
-
-    .companyInfo {
-      display: grid;
-      grid-template-rows: 1fr;
-      grid-template-columns: 1fr 1fr;
-    }
-
-    .extLinks {
-      display: grid;
-      grid-template-rows: 1fr;
-      grid-template-columns: 1fr 1fr 1fr;
     }
 
     .signButton {
@@ -84,9 +74,9 @@
       <div>About</div>
       <div>Store</div>
     </div>
-    <div class="d2">2</div>
+    <div class="d2"> </div>
     <div class="rightNav">
-      <div>gmail</div>
+      <div><a href="https://mail.google.com/mail/?tab=wm&ogbl" target="_blank" >Gmail</a></div>
       <div>Images</div>
       <div>blah</div>
       <a href="https://accounts.google.com/ServiceLogin?hl=en&amp;passive=true&amp;continue=https://www.google.com/&amp;ec=GAZAAQ" target= "_blank"><button class="signButton">Sign-In</button></a>
